--- a/index.html
+++ b/index.html
@@ -9,14 +9,41 @@
     
 </head>
 <body>
-    <div class="menu">
-        <ul>
-            <li><a href="#">Главное</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li><a href="#">О компании</a></li>
-            <li><a href="#">Как добраться</a></li>
-        </ul>
+    <div class="page">
+        <div class="menu">
+            <ul>
+                <li><a href="#">Главное</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Как добраться</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>Vestibulium ante ipsum</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <b>Nostrum sapiente amet</b> numquam alias, harum iure adipisci sequi facere rem optio ipsam atque illo earum consequuntur quis fugiat nulla aspernatur impedit.
+            Ratione non excepturi, dolor nostrum in minima vel rem quae eius pariatur neque! Voluptas, voluptatibus? Mollitia similique est deserunt natus accusantium architecto obcaecati consequuntur! Inventore eius earum recusandae aspernatur ab?
+            A earum laboriosam consequuntur at, facere expedita ut architecto nisi voluptatibus nemo. Vero nesciunt cumque voluptatum beatae excepturi in tempora molestias illum possimus placeat? Sapiente quis repudiandae ex temporibus facilis.
+            Sint eius repudiandae quia tempore. Deserunt dolorum minus, numquam repellat nisi a accusantium placeat corporis in voluptatum adipisci debitis repellendus veritatis. Pariatur aliquam exercitationem cupiditate? Et officia maxime vero aliquam.</p>
+            <p>Lorem ipsum dolor sit amet <b>consectetur adipisicing</b> elit. Excepturi similique at amet incidunt? Reiciendis debitis quod consequuntur! Quo modi corrupti amet quia quae, placeat illo distinctio voluptate voluptatum totam impedit?
+            Odio velit deleniti exercitationem quia sequi soluta adipisci quaerat voluptate ex blanditiis totam iusto veniam earum neque tempora necessitatibus iure, reiciendis aliquid quis ullam accusamus voluptas recusandae sit. Id, accusamus?
+            Optio officia id culpa ipsa sed ipsam commodi cupiditate fuga sint reprehenderit, architecto magni deserunt quisquam expedita quibusdam eligendi nemo fugiat eaque dolorum. Dolor magni mollitia maxime accusamus laboriosam at.</p>
+            <h2>Vestibulium ante</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tempore a nulla alias sed voluptate blanditiis beatae aperiam repudiandae, similique voluptatibus sit eos id eius dolorum quidem obcaecati sequi aut.
+            Fugit doloribus veritatis, <b>nam cumque iusto maiores</b> provident ab consequuntur voluptatibus commodi, corrupti quos consectetur. Beatae amet, aut aperiam, accusantium, unde perferendis cum tenetur mollitia dolorum nostrum officia dignissimos laudantium.
+            Voluptatem tempore repellendus, aspernatur id facere voluptatum molestias officia quasi voluptatibus deserunt, animi blanditiis eligendi! Fugiat eveniet voluptas facilis quibusdam, exercitationem explicabo veniam ratione ad consequatur consectetur accusantium dolorem accusamus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex omnis earum ipsam facilis qui. Reiciendis autem mollitia quas iste excepturi alias distinctio minus obcaecati molestias voluptatibus, temporibus maiores inventore eaque.
+            Recusandae labore asperiores reprehenderit neque alias facere optio officiis assumenda sapiente odio magni dolores amet animi dolore tenetur dolor sint ut sunt, debitis veritatis dicta eligendi aspernatur. Velit, repellat vitae!
+            Quod itaque, nesciunt dolor, odit, nam est at adipisci a labore voluptatem et eveniet ullam corporis voluptatum dolorem esse deserunt nisi. Vel ad accusamus accusantium mollitia veniam asperiores, culpa voluptate!
+            Incidunt commodi dolorum voluptates rem iure odit voluptas libero. <b>Laudantium</b> ipsa voluptatem recusandae amet culpa quis nihil dolor quae facere, distinctio vel aliquam, est quibusdam, nostrum illum id? Blanditiis, quis?</p>
+        </div>
+    </div>
+    <div class="links">
+        <a href="#">Sed</a>
+        <a href="#">Aenean</a>
+        <a href="#">Amet</a>
+        <a href="#">Volutpat</a>
+        <a href="#">Malesuada</a>
     </div>
 </body>
 </html>
